# shift_auth_service

./: .dockerignore  .env  .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  prometheus.yml  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
config/: .env
k8s/: zar-auth-service-configmap.yaml  zar-auth-service-deployment.yaml  zar-auth-service-secrets.yaml  zar-auth-service-service.yaml  zar-photos-pvc.yaml
migrations/: env.py
migrations/versions/: 180f9c10feba_create_users_table.py  485bf0cf79b4_initial_migration.py  4df2de7b1886_create_users_table.py  a8d08a8f69db_create_users_table.py
my-charts/: Chart.yaml  values.yaml
my-charts/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
my-charts/templates/tests/: test-connection.yaml
src/app/: __init__.py  auth_service.py  main.py
src/app/db/: db.py  models.py
src/app/services/: auth_service.py
src/tests/: test_auth_service.py  test_metrics.py
